[package]
name = "polymarket-copy-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "polymarket_copy_bot"
path = "src/lib.rs"

[[bin]]
name = "polymarket-bot"
path = "src/main.rs"

[[bin]]
name = "mempool-monitor"
path = "src/bin/mempool_monitor.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# HTTP client - 使用 rustls 避免 OpenSSL 依赖
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WebSocket - 使用 rustls
tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }

# Crypto - 使用 rustls 避免 OpenSSL
ethers = { version = "2.0", default-features = false, features = ["ws", "rustls"] }
hex = "0.4"

# Config
dotenv = "0.15"
config = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = "0.4"

# Channels
async-channel = "2.1"

# URL parsing for WebSocket
url = "2.5"

[dev-dependencies]
mockall = "0.12"
